--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name_use">Caller ID</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="setting">Setting</string>
+    <string name="setting">Settings</string>
     <string name="blocking">Blocking</string>
     <string name="contacts">Contacts</string>
     <string name="block_setting">Block Setting</string>
